# postmarkee

./: Cargo.toml  README.md
.github/workflows/: dependabot.yml
src/: base_url.rs  client.rs  error.rs  inbound.rs  lib.rs
tests/: inbound_email_tests.rs
tests/snapshots/: inbound_email_tests__deserialize.snap  inbound_email_tests__serialize.snap
