[package]
name = "postmarkee"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13"
bytes = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
thiserror = "1.0"
tokio = "1.17"
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
insta = "1.12"
quickcheck = "1.0"
quickcheck-derive = { git = "https://github.com/kafji/quickcheck-derive", tag = "v0.2.2" }
quickcheck_macros = "1.0"
serde_json = "1.0"
